--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-﻿boardgame-microservice-backend/.vscode
-boardgame-microservice-backend/authservice/.vscode
-boardgame-microservice-backend/authservice/target
-boardgame-microservice-backend/boardgameservice/target
-boardgame-microservice-backend/contractservice/target
-boardgame-microservice-backend/gateway/.vscode
-boardgame-microservice-backend/gateway/target
-boardgame-microservice-backend/userservice/.vscode
-boardgame-microservice-backend/userservice/target
+﻿.vscode
+authservice/.vscode
+authservice/target
+boardgameservice/target
+contractservice/target
+gateway/.vscode
+gateway/target
+userservice/.vscode
+userservice/target
