--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
         restart: always
         ports:
             - 8080:8080
+        environment:
+            - server.port=8080
         networks:
             - spring-cloud-network
 
