--- a/service-env.env
+++ b/service-env.env
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://db:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=Huyhoangdeptrai2003@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
