--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+GATEWAY_NAME=gateway
+GATEWAY_PORT=8080
+
 AUTH_SERVICE_NAME=authservice
 AUTH_SERVICE_PORT=8081
 
@@ -9,4 +12,3 @@ CONTRACT_SERVICE_PORT=8083
 
 BOARDGAME_SERVICE_NAME=boardgameservice
 BOARDGAME_SERVICE_PORT=8084
-
